syntax = "proto3";

package product;

option java_package = "com.orderservice.orderservice.grpc";
option java_multiple_files = true;
option java_outer_classname = "ProductProto";

service ProductService{
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest{
    string product_id = 1;
}

message GetProductResponse{
    string product_id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 quantity = 5;
}
